--- a/DE.ipynb
+++ b/DE.ipynb
@@ -219,158 +219,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "5c2cdd33",
+   "execution_count": 48,
+   "id": "71ce919b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>t</th>\n",
-       "      <th>x0</th>\n",
-       "      <th>x1</th>\n",
-       "      <th>x2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>-2.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.25</td>\n",
-       "      <td>-1.995220</td>\n",
-       "      <td>0.144205</td>\n",
-       "      <td>1.995352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.50</td>\n",
-       "      <td>-1.980628</td>\n",
-       "      <td>0.287614</td>\n",
-       "      <td>1.981689</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.75</td>\n",
-       "      <td>-1.955873</td>\n",
-       "      <td>0.429437</td>\n",
-       "      <td>1.959449</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.00</td>\n",
-       "      <td>-1.920644</td>\n",
-       "      <td>0.568896</td>\n",
-       "      <td>1.929098</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>24.00</td>\n",
-       "      <td>7.498380</td>\n",
-       "      <td>3.423937</td>\n",
-       "      <td>2.934089</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>24.25</td>\n",
-       "      <td>7.453757</td>\n",
-       "      <td>3.589655</td>\n",
-       "      <td>2.957332</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>24.50</td>\n",
-       "      <td>7.405023</td>\n",
-       "      <td>3.752411</td>\n",
-       "      <td>2.987647</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>24.75</td>\n",
-       "      <td>7.352199</td>\n",
-       "      <td>3.910163</td>\n",
-       "      <td>3.027058</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>100</th>\n",
-       "      <td>25.00</td>\n",
-       "      <td>7.295309</td>\n",
-       "      <td>4.060015</td>\n",
-       "      <td>3.078433</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>101 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         t        x0        x1        x2\n",
-       "0     0.00 -2.000000  0.000000  2.000000\n",
-       "1     0.25 -1.995220  0.144205  1.995352\n",
-       "2     0.50 -1.980628  0.287614  1.981689\n",
-       "3     0.75 -1.955873  0.429437  1.959449\n",
-       "4     1.00 -1.920644  0.568896  1.929098\n",
-       "..     ...       ...       ...       ...\n",
-       "96   24.00  7.498380  3.423937  2.934089\n",
-       "97   24.25  7.453757  3.589655  2.957332\n",
-       "98   24.50  7.405023  3.752411  2.987647\n",
-       "99   24.75  7.352199  3.910163  3.027058\n",
-       "100  25.00  7.295309  4.060015  3.078433\n",
-       "\n",
-       "[101 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame()\n",
     "df[\"t\"] = t\n",
     "for i in range(N):\n",
-    "    df[f\"X{i}\"] = res[:, i*4 + 0]\n",
+    "    df[f\"X{i}\"]  = res[:, i*4 + 0]\n",
     "    df[f\"Vx{i}\"] = res[:, i*4 + 1]\n",
-    "df"
+    "    df[f\"Y{i}\"]  = res[:, i*4 + 2]\n",
+    "    df[f\"Vy{i}\"] = res[:, i*4 + 3]\n",
+    "df.to_csv(\"result.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d48cd19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
